# mini-curiosity

./: .gitignore  README.md  TODOs.md  icm_notebook.ipynb  pyproject.toml
logs/: a2c_frozenlake_vecnormalize.pkl
logs/models/baseline/a2c_frozenlake_baseline/: evaluations.npz
logs/models/baseline/baseline-r0/: evaluations.npz
logs/models/icm/a2c_frozenlake_icm/: evaluations.npz
logs/models/icm/icm_k1/: evaluations.npz
logs/models/icm/icm_k1_metrics/: evaluations.npz
logs/models/icm/icm_k2_experiment_4x4/: evaluations.npz
logs/models/icm/icm_k2_experiment_int/: evaluations.npz
models/baseline/: a2c_frozenlake_baseline_vecnormalize.pkl  baseline-r0_vecnormalize.pkl
models/icm/: a2c_frozenlake_icm_icm.pth  a2c_frozenlake_icm_vecnormalize.pkl  icm_k1_icm 2.pth  icm_k1_vecnormalize 2.pkl  icm_k2_experiment_4x4_icm.pth  icm_k2_experiment_4x4_vecnormalize.pkl  icm_k2_experiment_int_icm.pth  icm_k2_experiment_int_vecnormalize.pkl  icm_k2_metrics_icm.pth  icm_k2_metrics_vecnormalize.pkl  icm_k3_experiment_int_icm.pth  icm_k3_experiment_int_vecnormalize.pkl  icm_k3_metrics_icm.pth  icm_k3_metrics_vecnormalize.pkl  icm_k4_experiment_int_icm.pth  icm_k4_experiment_int_vecnormalize.pkl  icm_k4_metrics_icm.pth  icm_k4_metrics_vecnormalize.pkl  icm_k5_experiment_int_icm.pth  icm_k5_experiment_int_vecnormalize.pkl  icm_k5_icm.pth  icm_k5_metrics_icm.pth  icm_k5_metrics_vecnormalize.pkl  icm_k5_vecnormalize.pkl
src/: baseline_a2c.py
src/curiosity_a2c/: __init__.py  baseline_a2c.py  compare.py  envs.py  icm_a2c.py  icm_module.py  main.py  record_videos.py  utils.py  wrappers.py
(+38 files in other folders)
