[project]
name = "curiosity-a2c"
version = "0.1.0"
description = "A2C with Intrinsic Curiosity Module for MountainCar"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tensorboard>=2.14.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "protobuf==3.20.3",
    "scipy>=1.10.1",
    "pygame>=2.6.1",
    "moviepy>=1.0.3",
]
packages = ["src/curiosity_a2c"]
[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
