[project]
name = "curiosity-a2c"
version = "0.1.0"
description = "A2C with Intrinsic Curiosity Module for FrozenLake"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "tensorboard>=2.14.0",
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "protobuf==3.20.3",
    "scipy>=1.10.1",
    "pygame>=2.6.1",
    "moviepy>=1.0.3",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
]
[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
